--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kallen.hadoop</groupId>
-    <artifactId>gw2-trading-reduce</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>golden-moa</artifactId>
+    <version>1.0</version>
     <build>
         <plugins>
             <plugin>
@@ -17,6 +17,7 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+            <!-- Shade in JSON for running the dataset generators. -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
