Update OneSilver500BuyReducer, rename to GoldenMoa, GW2SpidyMain jar with JSON Shade. (#8)
* Update README.

* Added runner for parser.

* Fixed parser and added (temporary) main.

* Mapper check.

* Clean up with comment and add toString for GW2Writable.

* Fixed bug and more helpful toString message for GW2Writable.

* Changed the profit to be the key, won't produce results if no max profit item available.

* Truncation instead of double.

* Added javadoc for clarity on MapReduce choices.

* JSON plugin shaded into build.

* Updated to GoldenMoa.

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kallen.hadoop</groupId>
-    <artifactId>gw2-trading-reduce</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>golden-moa</artifactId>
+    <version>1.0</version>
     <build>
         <plugins>
             <plugin>
@@ -16,6 +16,25 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
+            </plugin>
+            <!-- Shade in JSON for running the dataset generators. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>org.json:json</includes>
+                            </artifactSet>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
